--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,13 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <ul>
+            <li><a href="{{ path("index") }}">Index</a></li>
+            <li><a href="{{ path("app_register") }}">Register</a></li>
+            <li><a href="{{ path("app_login") }}">Login</a></li>
+            <li><a href="{{ path("app_logout") }}">Logout</a></li>
+        </ul>
+        {% block body %}
+        {% endblock %}
     </body>
 </html>
