--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
             <li><a href="{{ path("index") }}">Index</a></li>
             {% if app.user %}
                 [{{ app.user.name }}, {{ app.user.country }}]
+                <li><a href="{{ path("app_message_index") }}">Message</a></li>
                 <li><a href="{{ path("app_logout") }}">Logout</a></li>
             {% else %}
                 <li><a href="{{ path("app_login") }}">Login</a></li>
